--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
             <ul>
               <li><a class="active" href="./index.html">Home</a></li>
               <li><a href="">Hotels</a></li>
+              <li class="profile">
+                <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
+              </li>
+              <li><a href="" class="logOut">Log out</a></li>
+              <li class="profile" ><a href="./profile.html"><i class="fa-solid fa-user"></i></a></li>
               <li><a href="./auth.html" class="logIn">Log in</a></li>
               <li><a href="./auth.html" class="signUp">Sign up</a></li>
-              <li><a href="" class="logOut">Log out</a></li>
             </ul>
           </nav>
         </aside>
@@ -350,6 +354,5 @@
     <script src="./randomID.js"></script>
     <script src="./firebase.js"></script>
     <script src="./main.js"></script>
-    <script src="./auth.html"></script>
   </body>
 </html>
