--- a/host.html
+++ b/host.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./profile.css" />
     <link rel="stylesheet" href="./host.css" />
   </head>
   <body>
@@ -27,7 +28,7 @@
         <aside class="right-header">
           <nav>
             <ul>
-              <li><a href="./index.html">Home</a></li>
+              <li><a href="./index.html" class="active">Home</a></li>
               <li><a href="">Hotels</a></li>
               <li class="profile">
                 <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
@@ -46,7 +47,11 @@
         </aside>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section class="host-background">
+        <div class="overlay"></div>
+      </section>
+    </main>
     <footer>
       <section>
         <aside>
@@ -81,5 +86,21 @@
         </aside>
       </section>
     </footer>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+    <script
+      src="https://kit.fontawesome.com/af6bc85f41.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./randomID.js"></script>
+    <script src="./firebase.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
