--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
               <li><a href="./index.html">Home</a></li>
               <li><a href="">Hotels</a></li>
               <li>
-                <a href="./profile.html" class="profile"
+                <a href="./profile.html" class="active"
                   ><i class="fa-solid fa-user"></i
                 ></a>
               </li>
