host-first step

--- a/host.html
+++ b/host.html
@@ -49,6 +49,59 @@
     </header>
     <main>
       <section class="host-background">
+        <div class="overlay">
+          <section class="form">
+            <aside class="top">
+              <h3>Upload Your Hotel Info</h3>
+              <i class="fa-regular fa-pen-to-square"></i>
+            </aside>
+            <aside class="bottom">
+              <aside class="left">
+                <aside class="name font">
+                  <label for="hotel-name" class="form-label">Hotel name</label>
+                  <input
+                    type="text"
+                    id="hotel-name "
+                    class="form-control"
+                    placeholder="Please, insert your hotel name"
+                  />
+                </aside>
+                <aside class="image font">
+                  <label for="hotel-image">Hotel Image</label>
+                  <input type="file" id="hotel-image" class="form-control" />
+                </aside>
+                <aside class="description font">
+                  <label for="description">Description</label>
+                  <textarea
+                    id="description"
+                    class="form-control"
+                    placeholder="please, insert hotel details"
+                  ></textarea>
+                </aside>
+              </aside>
+              <aside class="right">
+                <aside class="rooms font">
+                  <label for="room1-image">Room1-Image</label>
+                  <input type="file" id="room2-image" class="form-control" />
+                  <input type="date" class="form-control" />
+                </aside>
+                <aside class="rooms font">
+                  <label for="room2-image">Room2-Image</label>
+                  <input type="file" id="room2-image" class="form-control" />
+                  <input type="date" class="form-control" />
+                </aside>
+                <aside class="rooms fonr">
+                  <i id="plus" class="fa-solid fa-plus"></i>
+                </aside>
+              </aside>
+            </aside>
+            <aside class="last">
+              <a href=""><button class="">Submit</button></a>
+            </aside>
+          </section>
+        </div>
+      </section>
+      <section class="host-background">
         <div class="overlay"></div>
       </section>
     </main>
