--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Log In</title>
+    <title>Profile</title>
     <script
       src="https://kit.fontawesome.com/fe5528085e.js"
       crossorigin="anonymous"
@@ -28,14 +28,14 @@
         <aside class="right-header">
           <nav>
             <ul>
-              <li><a href="./index.html">Home</a></li>
+              <li><a class="home">Home</a></li>
               <li><a href="">Hotels</a></li>
               <li>
-                <a href="./profile.html" class="active"
+                <a href="./profile.html" class="profile active"
                   ><i class="fa-solid fa-user"></i
                 ></a>
               </li>
-              <li><a href="" class="logOut">Log out</a></li>
+              <li><a class="logOut">Log out</a></li>
               <li>
                 <a href="./auth.html?auth" class="logIn">Log in</a>
               </li>
