--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <aside class="right-header">
           <nav>
             <ul>
-              <li><a class="active" href="./index.html">Home</a></li>
+              <li><a class="active home" href="./index.html">Home</a></li>
               <li><a href="">Hotels</a></li>
               <li class="profile">
                 <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
