host-firebase update

--- a/host.html
+++ b/host.html
@@ -67,6 +67,7 @@
               </aside>
               <aside class="image font">
                 <label for="hotel-image">Hotel Image</label>
+                <div class="change"></div>
                 <input type="file" id="hotel-image" class="form-control" />
               </aside>
               <aside class="description font">
