--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
               </li>
               <li><a href="" class="logOut">Log out</a></li>
               <li class="profile" ><a href="./profile.html"><i class="fa-solid fa-user"></i></a></li>
-              <li><a href="./auth.html" class="logIn">Log in</a></li>
-              <li><a href="./auth.html" class="signUp">Sign up</a></li>
+              <li><a href="./auth.html?auth" class="logIn">Log in</a></li>
+              <li><a href="./auth.html?register" class="signUp">Sign up</a></li>
             </ul>
           </nav>
         </aside>
