--- a/host.html
+++ b/host.html
@@ -15,6 +15,9 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.min.css" rel="stylesheet"
+    crossorigin="anonymous" />
+    <link rel="stylesheet" href="./calendar.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./profile.css" />
     <link rel="stylesheet" href="./host.css" />
@@ -101,8 +104,8 @@
                     placeholder="Please, insert hotel details"
                   ></textarea>
                 </aside>
-                <label for="calendar">Calendar</label>
-                <input id="calendar" type="date" class="form-control" />
+                <div id="calendar">
+                </div>
               </aside>
               <aside class="room-button">
                 <a id="add-room"><button>Add Room</button></a>
@@ -163,7 +166,7 @@
     </footer>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-database.js"></script>
     <script
       src="https://kit.fontawesome.com/af6bc85f41.js"
       crossorigin="anonymous"
@@ -174,6 +177,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="./calendar.js"></script>
     <script src="./randomID.js"></script>
     <script src="./firebase.js"></script>
     <script src="./main.js"></script>
