--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     </footer>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-database.js"></script>
     <script
       src="https://kit.fontawesome.com/af6bc85f41.js"
       crossorigin="anonymous"
@@ -354,5 +354,6 @@
     <script src="./randomID.js"></script>
     <script src="./firebase.js"></script>
     <script src="./main.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
