--- a/profile.html
+++ b/profile.html
@@ -115,7 +115,7 @@
     </footer>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-database.js"></script>
     <script
       src="https://kit.fontawesome.com/af6bc85f41.js"
       crossorigin="anonymous"
