rooms- next step

--- a/host.html
+++ b/host.html
@@ -15,8 +15,11 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.min.css" rel="stylesheet"
-    crossorigin="anonymous" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./calendar.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./profile.css" />
@@ -31,12 +34,12 @@
         <aside class="right-header">
           <nav>
             <ul>
-              <li><a href="./index.html" class="active home">Home</a></li>
+              <li><a class="active home">Home</a></li>
               <li><a href="">Hotels</a></li>
               <li class="profile">
                 <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
               </li>
-              <li><a href="" class="logOut">Log out</a></li>
+              <li><a class="logOut">Log out</a></li>
               <li>
                 <a href="./auth.html?auth" class="logIn">Log in</a>
               </li>
@@ -104,8 +107,7 @@
                     placeholder="Please, insert hotel details"
                   ></textarea>
                 </aside>
-                <div id="calendar">
-                </div>
+                <!-- <div id="calendar"></div> -->
               </aside>
               <aside class="room-button">
                 <a id="add-room"><button>Add Room</button></a>
