--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,7 @@
           <nav>
             <ul>
               <li><a class="home">Home</a></li>
-              <li><a href="">Hotels</a></li>
+              <li><a>Hotels</a></li>
               <li>
                 <a href="./profile.html" class="profile active"
                   ><i class="fa-solid fa-user"></i
