--- a/rooms.html
+++ b/rooms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Log In</title>
+    <title>Rooms</title>
     <script
       src="https://kit.fontawesome.com/fe5528085e.js"
       crossorigin="anonymous"
@@ -15,8 +15,13 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./calendar.css" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./auth.css" />
   </head>
   <body>
     <header>
@@ -27,7 +32,7 @@
         <aside class="right-header">
           <nav>
             <ul>
-              <li><a href="./index.html">Home</a></li>
+              <li><a class="active home">Home</a></li>
               <li><a href="">Hotels</a></li>
               <li class="profile">
                 <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
@@ -47,84 +52,8 @@
       </section>
     </header>
     <main>
-      <section class="background">
-        <div class="overlay">
-          <section class="form">
-            <aside class="top">
-              <aside class="left top-button">
-                <span
-                  ><a class="register" href="./auth.html?register"
-                    >Sign up</a
-                  ></span
-                >
-              </aside>
-              <aside class="right top-button">
-                <span
-                  ><a class="signIn" href="./auth.html?auth">Sign in</a></span
-                >
-              </aside>
-            </aside>
-            <aside class="bottom">
-              <div class="toggle">
-                <h6>Who are you?</h6>
-                <label for="guest">Guest</label>
-                <input
-                  type="radio"
-                  id="guest"
-                  name="role"
-                  value="guest"
-                  checked
-                />
-                <label for="host">Host</label>
-                <input type="radio" id="host" name="role" value="host" />
-              </div>
-              <div class="toggle">
-                <label for="name" class="form-label">First Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="name"
-                  placeholder="Your first name"
-                />
-              </div>
-              <div class="toggle">
-                <label for="lastName" class="form-label">Last Name</label>
-                <input
-                  type="text"
-                  id="lastName"
-                  class="form-control"
-                  placeholder="Your last name"
-                />
-              </div>
-              <div>
-                <label for="email" class="form-label">Email</label>
-                <input
-                  type="email"
-                  id="email"
-                  class="form-control"
-                  placeholder="Your email"
-                />
-              </div>
-              <div>
-                <label for="password" class="form-label">Password</label>
-                <div class="input-group mb-3">
-                  <span class="input-group-text" id="changePasswordVisibility"
-                    ><i class="fa-regular fa-eye"></i
-                  ></span>
-                  <input
-                    type="password"
-                    id="password"
-                    class="form-control"
-                    placeholder="Your password"
-                  />
-                </div>
-              </div>
-              <div>
-                <a><button id="actionButton">Sign Up</button></a>
-              </div>
-            </aside>
-          </section>
-        </div>
+      <section class="gallery">
+        <div class="overlay"></div>
       </section>
     </main>
     <footer>
@@ -174,8 +103,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="./calendar.js"></script>
     <script src="./randomID.js"></script>
     <script src="./firebase.js"></script>
-    <script src="./auth.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
