--- a/hotels.html
+++ b/hotels.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TravelMore</title>
+    <title>Hotels</title>
     <script
       src="https://kit.fontawesome.com/fe5528085e.js"
       crossorigin="anonymous"
@@ -26,8 +26,8 @@
         <aside class="right-header">
           <nav>
             <ul>
-              <li><a class="active home" href="./index.html">Home</a></li>
-              <li><a href="">Hotels</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a class="active home" href="./hotels.html">Hotels</a></li>
               <li class="profile">
                 <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
               </li>
@@ -43,18 +43,13 @@
       </section>
     </header>
     <main>
-      <section class="gallery">
-        <div class="overlay">
-          <h1>Tbilisi</h1>
-          <h2>The city that loves you</h2>
-        </div>
-      </section>
       <section class="hotels">
         <h2>choose your stay</h2>
         <aside class="hotels-top"></aside>
         <aside class="hotels-bottom">
           <a class="moreHotels"><button>See More</button></a>
         </aside>
+      </section>
       </section>
     </main>
     <footer>
@@ -108,5 +103,6 @@
     <script src="./firebase.js"></script>
     <script src="./main.js"></script>
     <script src="./index.js"></script>
+    </footer>
   </body>
 </html>
