--- a/booking.html
+++ b/booking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TravelMore</title>
+    <title>Booking</title>
     <script
       src="https://kit.fontawesome.com/fe5528085e.js"
       crossorigin="anonymous"
@@ -15,7 +15,14 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./calendar.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./booking.css">
   </head>
   <body>
     <header>
@@ -26,35 +33,50 @@
         <aside class="right-header">
           <nav>
             <ul>
-              <li><a class="active home" href="./index.html">Home</a></li>
+              <li><a class="active home">Home</a></li>
               <li><a href="">Hotels</a></li>
               <li class="profile">
                 <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
               </li>
-              <li><a href="" class="logOut">Log out</a></li>
-              <li class="profile">
-                <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
+              <li><a class="logOut">Log out</a></li>
+              <li>
+                <a href="./auth.html?auth" class="logIn">Log in</a>
               </li>
-              <li><a href="./auth.html?auth" class="logIn">Log in</a></li>
-              <li><a href="./auth.html?register" class="signUp">Sign up</a></li>
+              <li>
+                <a href="./auth.html?register" class="signUp" class="active"
+                  >Sign up</a
+                >
+              </li>
             </ul>
           </nav>
         </aside>
       </section>
     </header>
     <main>
-      <section class="gallery">
+      <section class="gallery ">
         <div class="overlay">
-          <h1>Tbilisi</h1>
-          <h2>The city that loves you</h2>
+          <section class="bookingForm">
+            <aside class="top">
+              <h3>Reservation</h3>
+            </aside>
+            <aside class="bottom">
+              <aside class="left">
+                <input id="hotelName"></input>
+                <div id="hotelImage"></div>
+                <textarea id="hotelDescr"></textarea>
+              </aside>
+              <aside class="mid">
+                <div id="roomImage"></div>
+                <textarea id="roomDescr"></textarea>
+              </aside>
+              <aside class="right">
+                <label class="form-label">Reserve</label>
+                <div id="calendar"></div>
+                <button id="submit">Submit</button>
+              </aside>
+            </aside>
+          </section>
         </div>
-      </section>
-      <section class="hotels">
-        <h2>choose your stay</h2>
-        <aside class="hotels-top"></aside>
-        <aside class="hotels-bottom">
-          <a class="moreHotels"><button>See More</button></a>
-        </aside>
       </section>
     </main>
     <footer>
@@ -104,9 +126,12 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="./calendar.js"></script>
     <script src="./randomID.js"></script>
     <script src="./firebase.js"></script>
     <script src="./main.js"></script>
-    <script src="./index.js"></script>
+    <script src="./booking.js"></script>
+    </footer>
   </body>
 </html>
