Change calendar library

--- a/host.html
+++ b/host.html
@@ -35,7 +35,7 @@
           <nav>
             <ul>
               <li><a class="active home">Home</a></li>
-              <li><a href="">Hotels</a></li>
+              <li><a href="./hotels.html">Hotels</a></li>
               <li class="profile">
                 <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
               </li>
