--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <nav>
             <ul>
               <li><a class="active home" href="./index.html">Home</a></li>
-              <li><a href="">Hotels</a></li>
+              <li><a href="./hotels.html">Hotels</a></li>
               <li class="profile">
                 <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
               </li>
