--- a/rooms.html
+++ b/rooms.html
@@ -15,11 +15,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.min.css"
-      rel="stylesheet"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/@uvarov.frontend/vanilla-calendar/build/vanilla-calendar.min.css" rel="stylesheet" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./calendar.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./rooms.css" />
@@ -58,49 +54,52 @@
           <section class="roomForm">
             <aside class="top">
               <h3>Room Details</h3>
+              <i id="edit" class="fa-regular fa-pen-to-square"></i>
             </aside>
-            <aside class="bottomFirst">
-              <aside>
-                <label for="yourHotel" class="form-label">Hotel name</label>
-                <input type="text" id="yourHotel" class="form-control" />
+            <aside class="middle">
+              <aside class="bottomFirst">
+                <aside>
+                  <label for="yourHotel" class="form-label">Hotel name</label>
+                  <input type="text" id="yourHotel" class="form-control" />
+                </aside>
+                <aside>
+                  <label for="yourHotelImage" class="form-label"
+                    >Hotel Image</label
+                  >
+                  <div class="yourHotelImage"></div>
+                  <input class="uploadHotelImage" type="file">
+                </aside>
+                <aside>
+                  <label for="yourHotelDescription" class="form-label"
+                    >Description</label
+                  >
+                  <textarea
+                    id="yourHotelDescription"
+                    class="form-control"
+                  ></textarea>
+                </aside>
+                <button class="submit">Approve</button>
               </aside>
-              <aside>
-                <label for="yourHotelImage" class="form-label"
-                  >Hotel Image</label
-                >
-                <div class="yourHotelImage"></div>
+              <aside class="bottomSecond">
+                <aside>
+                  <label for="yourRoom" class="form-label">Room</label>
+                  <div class="yourRoom"></div>
+                  <input class="uploadRoom" type="file">
+                </aside>
+                <aside>
+                  <label for="yourRoomDescription" class="form-label"
+                    >Description</label
+                  >
+                  <textarea
+                    id="yourRoomDescription"
+                    class="form-control"
+                  ></textarea>
+                </aside>
+                <aside>
+                  <label class="form-label">Reservation</label>
+                  <div id="calendar"></div>
+                </aside>
               </aside>
-              <aside>
-                <label for="yourHotelDescription" class="form-label"
-                  >Description</label
-                >
-                <textarea
-                  id="yourHotelDescription"
-                  class="form-control"
-                ></textarea>
-              </aside>
-            </aside>
-            <aside class="bottomSecond">
-              <aside>
-                <label for="yourRoom" class="form-label">Room</label>
-                <div class="yourRoom"></div>
-              </aside>
-              <aside>
-                <label for="yourHoteldescription" class="form-label"
-                  >Description</label
-                >
-                <textarea
-                  id="yourRoomDescriptiondescription"
-                  class="form-control"
-                ></textarea>
-              </aside>
-              <aside>
-                <label class="form-label">Reservation</label>
-                <div id="calendar"></div>
-              </aside>
-            </aside>
-            <aside class="last">
-              <button class="submit">Approve</button>
             </aside>
           </section>
         </div>
@@ -153,8 +152,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-    <script src="./calendar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@uvarov.frontend/vanilla-calendar/build/vanilla-calendar.min.js"></script>    <script src="./calendar.js"></script>
+    <script src="./convertBase64.js"></script>
     <script src="./randomID.js"></script>
     <script src="./firebase.js"></script>
     <script src="./main.js"></script>
