Add responsive part 1

--- a/booking.html
+++ b/booking.html
@@ -19,6 +19,8 @@ x<!DOCTYPE html>
     <link rel="stylesheet" href="./calendar.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./booking.css">
+    <link rel="stylesheet" href="./responsive.css">
+    <link rel="stylesheet" href="./responsiveBooking.css">
   </head>
   <body>
     <header>
@@ -30,7 +32,7 @@ x<!DOCTYPE html>
           <nav>
             <ul>
               <li><a class="active home">Home</a></li>
-              <li><a href="">Hotels</a></li>
+              <li><a href="./hotels.html">Hotels</a></li>
               <li class="profile">
                 <a href="./profile.html"><i class="fa-solid fa-user"></i></a>
               </li>
@@ -66,7 +68,7 @@ x<!DOCTYPE html>
                 <textarea id="roomDescr"></textarea>
               </aside>
               <aside class="right">
-                <label class="form-label">Reserve</label>
+                <label class="form-label reserve">Reserve</label>
                 <div id="calendar"></div>
                 <button id="submit">Submit</button>
               </aside>
@@ -77,16 +79,17 @@ x<!DOCTYPE html>
     </main>
     <footer>
       <section>
-        <aside>
-          <h5>Our Address</h5>
-          <p>Tbilisi, Aghmashenebeli Avenue 3</p>
+        <aside class="left">
+          <h5 class="address-caption">Our Address</h5>
+          <p class="address">Tbilisi,</p>
+          <p>Aghmashenebeli Avenue 3</p>
         </aside>
-        <aside>
+        <aside class="contact right">
           <h5>Contact Us</h5>
           <p>Travelmore@gmail.com</p>
           <p>Tel: +995-567-43-13-21</p>
         </aside>
-        <aside>
+        <aside class="left">
           <h5>We Accept</h5>
           <nav>
             <ul>
@@ -97,8 +100,8 @@ x<!DOCTYPE html>
             </ul>
           </nav>
         </aside>
-        <aside>
-          <h5>Follow Us</h5>
+        <aside class=" second-right">
+          <h5 class="follow">Follow Us</h5>
           <nav>
             <ul>
               <li><i class="fa-brands fa-facebook"></i></li>
