--- a/profile.html
+++ b/profile.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./auth.css" />
     <link rel="stylesheet" href="./profile.css" />
+    <link rel="stylesheet" href="./responsive.css">
   </head>
   <body>
     <header>
@@ -29,7 +30,7 @@
           <nav>
             <ul>
               <li><a class="home">Home</a></li>
-              <li><a>Hotels</a></li>
+              <li><a href="./hotels.html">Hotels</a></li>
               <li>
                 <a href="./profile.html" class="profile active"
                   ><i class="fa-solid fa-user"></i
@@ -81,16 +82,17 @@
     </main>
     <footer>
       <section>
-        <aside>
-          <h5>Our Address</h5>
-          <p>Tbilisi, Aghmashenebeli Avenue 3</p>
+        <aside class="left">
+          <h5 class="address-caption">Our Address</h5>
+          <p class="address">Tbilisi,</p>
+          <p>Aghmashenebeli Avenue 3</p>
         </aside>
-        <aside>
+        <aside class="contact right">
           <h5>Contact Us</h5>
           <p>Travelmore@gmail.com</p>
           <p>Tel: +995-567-43-13-21</p>
         </aside>
-        <aside>
+        <aside class="left">
           <h5>We Accept</h5>
           <nav>
             <ul>
@@ -101,8 +103,8 @@
             </ul>
           </nav>
         </aside>
-        <aside>
-          <h5>Follow Us</h5>
+        <aside class=" second-right">
+          <h5 class="follow">Follow Us</h5>
           <nav>
             <ul>
               <li><i class="fa-brands fa-facebook"></i></li>
