--- a/auth.html
+++ b/auth.html
@@ -17,6 +17,8 @@
     />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./auth.css" />
+    <link rel="stylesheet" href="./responsive.css">
+    <link rel="stylesheet" href="./responsive-auth.css">
   </head>
   <body>
     <header>
@@ -65,7 +67,7 @@
               </aside>
             </aside>
             <aside class="bottom">
-              <div class="toggle">
+              <div class="toggle radio">
                 <h6>Who are you?</h6>
                 <label for="guest">Guest</label>
                 <input
@@ -129,16 +131,17 @@
     </main>
     <footer>
       <section>
-        <aside>
-          <h5>Our Address</h5>
-          <p>Tbilisi, Aghmashenebeli Avenue 3</p>
+        <aside class="left">
+          <h5 class="address-caption">Our Address</h5>
+          <p class="address">Tbilisi,</p>
+          <p>Aghmashenebeli Avenue 3</p>
         </aside>
-        <aside>
+        <aside class="contact right">
           <h5>Contact Us</h5>
           <p>Travelmore@gmail.com</p>
           <p>Tel: +995-567-43-13-21</p>
         </aside>
-        <aside>
+        <aside class="left">
           <h5>We Accept</h5>
           <nav>
             <ul>
@@ -149,8 +152,8 @@
             </ul>
           </nav>
         </aside>
-        <aside>
-          <h5>Follow Us</h5>
+        <aside class=" second-right">
+          <h5 class="follow">Follow Us</h5>
           <nav>
             <ul>
               <li><i class="fa-brands fa-facebook"></i></li>
