--- a/host.html
+++ b/host.html
@@ -15,15 +15,12 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.min.css"
-      rel="stylesheet"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="./calendar.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./profile.css" />
     <link rel="stylesheet" href="./host.css" />
+    <link rel="stylesheet" href="./responsive.css">
+    <link rel="stylesheet" href="./responsiveHost.css">
   </head>
   <body>
     <header>
@@ -54,7 +51,7 @@
       </section>
     </header>
     <main>
-      <section class="host-background">
+      <section class="host-background second">
         <div class="overlay">
           <section class="form">
             <aside class="top">
@@ -134,16 +131,17 @@
     </main>
     <footer>
       <section>
-        <aside>
-          <h5>Our Address</h5>
-          <p>Tbilisi, Aghmashenebeli Avenue 3</p>
+        <aside class="left">
+          <h5 class="address-caption">Our Address</h5>
+          <p class="address">Tbilisi,</p>
+          <p>Aghmashenebeli Avenue 3</p>
         </aside>
-        <aside>
+        <aside class="contact right">
           <h5>Contact Us</h5>
           <p>Travelmore@gmail.com</p>
           <p>Tel: +995-567-43-13-21</p>
         </aside>
-        <aside>
+        <aside class="left">
           <h5>We Accept</h5>
           <nav>
             <ul>
@@ -154,8 +152,8 @@
             </ul>
           </nav>
         </aside>
-        <aside>
-          <h5>Follow Us</h5>
+        <aside class=" second-right">
+          <h5 class="follow">Follow Us</h5>
           <nav>
             <ul>
               <li><i class="fa-brands fa-facebook"></i></li>
@@ -179,8 +177,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-    <script src="./calendar.js"></script>
     <script src="./randomID.js"></script>
     <script src="./firebase.js"></script>
     <script src="./main.js"></script>
