--- a/rooms.html
+++ b/rooms.html
@@ -15,7 +15,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link href="https://cdn.jsdelivr.net/npm/@uvarov.frontend/vanilla-calendar/build/vanilla-calendar.min.css" rel="stylesheet" crossorigin="anonymous"/>
+    <link href="https://cdn.jsdelivr.net/npm/@uvarov.frontend/vanilla-calendar@2.2.5/build/vanilla-calendar.min.css" rel="stylesheet" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./calendar.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./rooms.css" />
@@ -153,7 +153,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@uvarov.frontend/vanilla-calendar/build/vanilla-calendar.min.js"></script>    <script src="./calendar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@uvarov.frontend/vanilla-calendar@2.2.5/build/vanilla-calendar.min.js"></script>    <script src="./calendar.js"></script>
     <script src="./convertBase64.js"></script>
     <script src="./randomID.js"></script>
     <script src="./firebase.js"></script>
